Revision history for perl distribution Mojo-IRC

0.28 Not Released
 - Add "local_address" attribute

0.27 2015-09-21T11:22:24+0200
 - Fix calling callbacks async
 - Remove support for MOJO_IRC_OFFLINE=1

0.26 2015-07-11T13:26:26+0200
 - Bumping Mojolicious requirement to 6.00

0.25 2015-06-15T15:31:27+0200
 - Remove [+nt] and friends from topic returned from channels()
 - Fix parsing to allow CR or LF at buffer end. #24
   Contributor: Ben Tyler

0.24 2015-06-02T22:18:12+0200
 - Fix default nick only contains [a-z] and "_".

0.23 2015-06-02T00:46:24+0200
 - Fix requirement to Mojo::Util (Need version 1.33)

0.22 2015-05-31T09:21:58+0200
 - Add Mojo::IRC::UA
 - Add Mojo::IRC::UA->channels() method
 - Add Mojo::IRC::UA->channel_topic() method
 - Add Mojo::IRC::UA->channel_users() method
 - Add Mojo::IRC::UA->join_channel() method
 - Add Mojo::IRC::UA->nick() method
 - Add Mojo::IRC::UA->whois() method

0.21 2015-05-31T07:54:33+0200
 - Deprecated MOJO_IRC_OFFLINE in favor of Test::Mojo::IRC

0.20 2015-05-30T19:29:25+0200
 - Test::Mojo::IRC can fetch server output from __DATA__ section
 - Fix "choppy" buffer from Test::Mojo::IRC test server

0.19 2015-05-22T13:44:50+0200
 - Add Test::Mojo::IRC
 - Changed default value for nick() to mirror user()
 - Changed default value for user() to reflect current logged in user

0.18 2015-03-01T18:05:08Z
 - More tests are skipped on MSWin32

0.17 2015-02-15T21:44:25Z
 - Fix parsing bug in _read() on unknown numeric IRC event, #21
 - Fix setting nick in irc_rpl_welcome default handler, #20

0.16 2015-02-08T11:41:48Z
 - Add disconnect() can be called without a callback Contributor: Dan Book
 - Fix "close" event can reconnect Contributor: Dan Book
 - Fix responding to CTCP messages
 - Fix responding to CTCP PING message

0.15 2015-01-09T16:19:34Z
 - More robust unit tests

0.14 2015-01-02T13:31:11Z
 - Fix failing test on BSD

0.13 2014-09-14T20:16:25Z
 - emit_safe() is deprecated in Mojolicious

0.12 2014-09-06T19:25:13Z